<resources>
    <string name="app_name">Caculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="square">x^2</string>
    <string name="sqrt">&#8730;</string>
    <string name="div">&#247;</string>
    <string name="mul">&#215;</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="neg">&#8317;&#8315;&#8318;</string>

    <string name="backspace">&#9003;</string>

    <string name="display">Value</string>
</resources>