<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear"
                style="@style/calculatorBTN2"
                android:onClick="onClear"
                android:text="@string/clear"/>

            <Button
                android:id="@+id/parent"
                style="@style/calculatorBTN2"
                android:onClick="onSqrt"
                android:text="@string/sqrt" />

            <Button
                android:id="@+id/negative"
                style="@style/calculatorBTN2"
                android:onClick="onNegative"
                android:text="@string/neg" />

            <Button
                android:id="@+id/add"
                style="@style/calculatorBTN2"
                android:onClick="onBasicOperation"
                android:text="@string/add"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/seven"/>

            <Button
                android:id="@+id/eight"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/eight"/>

            <Button
                android:id="@+id/nine"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/nine"/>

            <Button
                android:id="@+id/sub"
                style="@style/calculatorBTN2"
                android:onClick="onBasicOperation"
                android:text="@string/sub"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/four"/>

            <Button
                android:id="@+id/five"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/five"/>

            <Button
                android:id="@+id/six"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/six"/>

            <Button
                android:id="@+id/mul"
                style="@style/calculatorBTN2"
                android:onClick="onBasicOperation"
                android:text="@string/mul"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/one"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/two"/>

            <Button
                android:id="@+id/three"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/three"/>

            <Button
                android:id="@+id/div"
                style="@style/calculatorBTN2"
                android:onClick="onBasicOperation"
                android:text="@string/div"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/zero"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/zero" />

            <Button
                android:id="@+id/point"
                style="@style/calculatorBTN"
                android:onClick="touchDigit"
                android:text="@string/point"/>

            <Button
                android:id="@+id/backspace"
                style="@style/calculatorBTN"
                android:onClick="onBackspace"
                android:text="@string/backspace"/>

            <Button
                android:id="@+id/equal"
                style="@style/calculatorBTN2"
                android:onClick="onEqual"
                android:text="@string/equals"/>
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:alpha="0"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/prevdisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/operation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>